--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html lang="en">
 <head>
 <title>1.5.0</title>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-33RW492F9Z"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-33RW492F9Z');
+</script>
 </head>
 <body>
 1.5.0
